Fixed bug #55399 (parse_url() incorrectly treats ':' as a valid path)